Trung update sự kiện của khóa học với từng bài học