@@ -5,7 +5,11 @@ import androidx.appcompat.app.AppCompatActivity;
 import androidx.recyclerview.widget.LinearLayoutManager;
 import androidx.recyclerview.widget.RecyclerView;
 
+import com.example.englishlearningapp.Model.SubItem;
+import com.example.englishlearningapp.Model.Topic;
+
 import java.util.ArrayList;
+import java.util.Arrays; // Dùng Arrays.asList cho an toàn với mọi phiên bản Android
 import java.util.List;
 
 public class CourseActivity extends AppCompatActivity {
@@ -30,51 +34,52 @@ public class CourseActivity extends AppCompatActivity {
     private List<Topic> createTopicData() {
         List<Topic> list = new ArrayList<>();
 
-        // 1. Family
-        List<SubItem> familySubs = List.of(
-                new SubItem("Family members", R.drawable.img_ic_family_member),
-                new SubItem("Daily activities", R.drawable.img_ic_family_activityday),
-                new SubItem("Relationship", R.drawable.img_ic_family_relative)
+        // 1. Family (Các ID: 1, 2, 3)
+        // Lưu ý: Mình dùng Arrays.asList() thay cho List.of() để chạy được trên cả Android cũ
+        List<SubItem> familySubs = Arrays.asList(
+                new SubItem(1, "Family members", R.drawable.img_ic_family_member),
+                new SubItem(2, "Daily activities", R.drawable.img_ic_family_activityday),
+                new SubItem(3, "Relationship", R.drawable.img_ic_family_relative)
         );
         list.add(new Topic("Family", R.drawable.img_ic_family_course, familySubs));
 
-        // 2. School Life
-        List<SubItem> schoolSubs = List.of(
-                new SubItem("Class", R.drawable.img_ic_family_course),
-                new SubItem("Teacher", R.drawable.img_ic_family_course),
-                new SubItem("Homework", R.drawable.img_ic_family_course)
+        // 2. School Life (Các ID: 4, 5, 6)
+        List<SubItem> schoolSubs = Arrays.asList(
+                new SubItem(4, "Class", R.drawable.img_ic_family_course),
+                new SubItem(5, "Teacher", R.drawable.img_ic_family_course),
+                new SubItem(6, "Homework", R.drawable.img_ic_family_course)
         );
         list.add(new Topic("School Life", R.drawable.img_ic_schoollife_course, schoolSubs));
 
-        // 3. Food & Drink
-        List<SubItem> foodSubs = List.of(
-                new SubItem("Fruits", R.drawable.img_ic_fruits),
-                new SubItem("Vegetables", R.drawable.img_ic_family_course),
-                new SubItem("Drinks", R.drawable.img_ic_family_course)
+        // 3. Food & Drink (Các ID: 7, 8, 9)
+        List<SubItem> foodSubs = Arrays.asList(
+                new SubItem(7, "Fruits", R.drawable.img_ic_fruits),
+                new SubItem(8, "Vegetables", R.drawable.img_ic_family_course),
+                new SubItem(9, "Drinks", R.drawable.img_ic_family_course)
         );
         list.add(new Topic("Food & Drink", R.drawable.img_ic_fooddrink_course, foodSubs));
 
         // 4. House & Home
-        List<SubItem> homeSubs = List.of(
-                new SubItem("Kitchen", R.drawable.img_ic_family_course),
-                new SubItem("Bedroom", R.drawable.img_ic_family_course),
-                new SubItem("Living Room", R.drawable.img_ic_family_course)
+        List<SubItem> homeSubs = Arrays.asList(
+                new SubItem(10, "Kitchen", R.drawable.img_ic_family_course),
+                new SubItem(11, "Bedroom", R.drawable.img_ic_family_course),
+                new SubItem(12, "Living Room", R.drawable.img_ic_family_course)
         );
         list.add(new Topic("House & Home", R.drawable.img_ic_househome_course, homeSubs));
 
         // 5. Shopping
-        List<SubItem> shoppingSubs = List.of(
-                new SubItem("Clothes", R.drawable.img_ic_family_course),
-                new SubItem("Shoes", R.drawable.img_ic_family_course),
-                new SubItem("Accessories", R.drawable.img_ic_family_course)
+        List<SubItem> shoppingSubs = Arrays.asList(
+                new SubItem(13, "Clothes", R.drawable.img_ic_family_course),
+                new SubItem(14, "Shoes", R.drawable.img_ic_family_course),
+                new SubItem(15, "Accessories", R.drawable.img_ic_family_course)
         );
         list.add(new Topic("Shopping", R.drawable.img_ic_shopping_course, shoppingSubs));
 
         // 6. Animal
-        List<SubItem> animalSubs = List.of(
-                new SubItem("Dog", R.drawable.img_ic_family_course),
-                new SubItem("Cat", R.drawable.img_ic_family_course),
-                new SubItem("Bird", R.drawable.img_ic_family_course)
+        List<SubItem> animalSubs = Arrays.asList(
+                new SubItem(16, "Dog", R.drawable.img_ic_family_course),
+                new SubItem(17, "Cat", R.drawable.img_ic_family_course),
+                new SubItem(18, "Bird", R.drawable.img_ic_family_course)
         );
         list.add(new Topic("Animal", R.drawable.img_ic_animal_course, animalSubs));
 
